--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,19 @@
 --- #YAML:1.0
 name: Tie-TextDir
-version: 0.05
-license: unknown
+version: 0.06
+license: perl
 distribution_type: module
-requires: {}
+requires:
+  Carp: 0
+  Fcntl: 0
+  File::Spec: 0
+  Symbol: 0
 recommends: {}
-build_requires: {}
+build_requires:
+  Test: 0
 conflicts: {}
 provides:
   Tie::TextDir:
     file: TextDir.pm
-    version: 0.05
-generated_by: Module::Build version 0.18_04
+    version: 0.06
+generated_by: Module::Build version 0.20_01
